# atu-method

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE-DOCS  README.md  pyproject.toml
atu_method/: __init__.py
docs/: _index.md  apparatus.md  architecture.md  binding-rules-hebrew.md  binding-rules-lxx.md  canon-validator-alignment-protocol.md  change-protocol.md  deployment-status.md  framework.md  glossary.md  methodology-position.md  retraction-log-protocol.md  rule-equivalence-map.md  rule-template.md  substrate.md  toolset-architecture.md
memories/: _index.md  feedback_agent_sweep_filter.md  feedback_application_consistency_vs_rule_coverage.md  feedback_architecture_must_match_method.md  feedback_ask_when_directive_is_ambiguous.md  feedback_atu_as_textfabric_node_layer.md  feedback_atu_test_is_bidirectional.md  feedback_camera_angle_diagnostic_demote.md  feedback_check_existing_tooling.md  feedback_commit_workflow.md  feedback_compaction_is_session_boundary.md  feedback_compaction_resume_protocol.md  feedback_cross_corpus_convergence.md  feedback_decisions_in_chat_not_files.md  feedback_directive_protocol.md  feedback_dont_over_engineer_orchestration.md  feedback_endstate_first_orientation.md  feedback_goldilocks_refinement.md  feedback_grammar_constrains_not_determines.md  feedback_no_eyeball_offers.md  feedback_no_fake_dilemmas.md  feedback_over_structuring_disposition.md  feedback_parallel_horde_default.md  feedback_principle_vs_mechanical_coverage.md  feedback_proactive_open_item_examination.md  feedback_production_tier_empirical.md  feedback_punctuation_not_evidence.md  feedback_rhetoric_bandwagon.md  feedback_rhetoric_figures_constrain_atu.md  feedback_rhetorical_force.md  feedback_rule_proposal_gates.md  feedback_scripts_before_agents.md  feedback_sense_line_mission.md  feedback_sweep_when_introducing_a_window.md  feedback_three_anti_default_factors.md
scholarship/: _index.md
(+103 files in other folders)
